Continue refactoring `AbstractModel` classes: Secret handling, Service Account name, etc. (#7992)
Signed-off-by: Jakub Scholz <www@scholzj.com>
Signed-off-by: Kanha gupta <kanhag4163@gmail.com>